<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
       		android:entries="@array/days_of_week"
        	android:prompt="@string/days_prompt"/>
        
         <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:entries="@array/time_of_lesson"
        	android:prompt="@string/time_prompt" />

         <Spinner
             android:id="@+id/spinner3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        	android:entries="@array/week_number"
        	android:prompt="@string/week_prompt" />

         <EditText
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Название предмета" >

             <requestFocus />
         </EditText>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Преподователь" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Аудитория" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Корпус" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       		android:onClick="onClick"
            android:text="Добавить" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       		android:onClick="backClick"
            android:text="Отмена" />

    </LinearLayout>
    

</ScrollView>
