<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deshkevich.bstuschedule.activities.MainActivity" >

    <TextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/today_schedule" />    
    
    
    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/first_lesson"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_first"
        android:width="120dp" >
    </TextView>
    
    <TextView
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/second_lesson"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_second"
        android:width="120dp" />

    <TextView
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/third_lesson"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_third"
        android:width="120dp" />

    <TextView
        android:id="@+id/EditText03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fourth_lesson"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_fourth"
        android:width="120dp" />

    <TextView
        android:id="@+id/first_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/editText2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/second_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/first_lesson"
        android:layout_below="@+id/first_lesson"
        android:layout_marginTop="42dp"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/third_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/second_lesson"
        android:layout_below="@+id/second_lesson"
        android:layout_marginTop="42dp"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fourth_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/third_lesson"
        android:layout_below="@+id/third_lesson"
        android:layout_marginTop="42dp"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/first_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/second_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_alignRight="@+id/EditText01"
        android:layout_below="@+id/EditText01"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/third_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText02"
        android:layout_alignRight="@+id/EditText02"
        android:layout_below="@+id/EditText02"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/fourth_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_alignRight="@+id/EditText03"
        android:layout_below="@+id/EditText03"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/first_cab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/first_teacher"
        android:layout_below="@+id/first_teacher"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/second_cab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_teacher"
        android:layout_alignLeft="@+id/second_teacher"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/third_cab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_below="@+id/third_teacher"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/fourth_cab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fourth_teacher"
        android:layout_below="@+id/fourth_teacher"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fourth_lesson"
        android:layout_alignTop="@+id/fourth_cab"
        android:onClick="newLessonClick"
        android:text="@string/new_lesson" />

</RelativeLayout>
